# lidar_rtk_calibration

./: .clang-format  .cmake-format  .gitignore  CHANGELOG.md  CMakeLists.txt  README.md  package.xml
include/: geodetic_conv.hpp  gq_lidar_rtk_calib.h  lidar_rtk_calibConfig.h.in  rs_lid_rtk_calib.h  sim_rtk_mapping.h
include/calib/: DualQuaternion.h  EigenUtils.h  HandEyeCalibration.cc  HandEyeCalibration.h  QuaternionMapping.h  type.cpp  types.h
launch/: extract_rtk_pose.launch  run_calib.launch  sim_rtk_mapping.launch
rviz/: data_show.rviz  sim_rtk_mapping.rviz
src/: extract_rtk_pose_node.cpp  gq_lidar_rtk_calib.cpp  gq_lidar_rtk_calib_node.cpp  relative_pose_tool.cpp  rs_lidar_rtk_calib.cpp  rs_lidar_rtk_calib_node.cpp  rtk_mapping_pcd_tool.cpp  sim_rtk_mapping.cpp  sim_rtk_mapping_node.cpp  tf_b_to_a_tool.cpp  txt2pcd.cpp
test/: tf_use_quat.cpp
