<?xml version="1.0"?>
<package>
  <name>lidar_rtk_calib_sdk</name>
  <version>0.1.0</version>
  <description>The lidar and rtk calibration</description>
  <maintainer email="quchunlei@china-icv.cn">Lequeint Qu</maintainer>
  <license>TODO</license>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>sensor_msgs</build_depend>
  <build_depend>message_filters</build_depend>

  <run_depend>roscpp</run_depend>
  <run_depend>std_msgs</run_depend>
  <run_depend>sensor_msgs</run_depend>
  <run_depend>message_filters</run_depend>

</package>
